--- a/practice/package.json
+++ b/practice/package.json
@@ -11,6 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tailwindcss/cli": "^4.0.0",
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^4.0.0"
   }
 }
