--- a/practice/package.json
+++ b/practice/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "npx @tailwindcss/cli -i ./views/input.css -o ./views/output.css --watch"
+    
   },
   "keywords": [],
   "author": "",
