--- a/practice2/package.json
+++ b/practice2/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"npx @tailwindcss/cli -i ./views/input.css -o ./public/output.css --watch",
+    "start":"nodemon server.js & npm run dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "@tailwindcss/cli": "^4.0.1",
+    "express": "^4.21.2",
+    "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
