--- a/assign/package.json
+++ b/assign/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.5",
+    "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "tailwindcss": "^4.0.5"
