--- a/assign/package.json
+++ b/assign/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx @tailwindcss/cli -i ./views/input.css -o ./public/output.css --watch",
-    "start": "nodemon server.js & npm run dev"
+    "start": "nodemon server.js && npm run dev"
   },
   "keywords": [],
   "author": "",
