--- a/Mongo/package.json
+++ b/Mongo/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mongodb": "^6.15.0",
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
